--- a/06_cinemapedia/pubspec.yaml
+++ b/06_cinemapedia/pubspec.yaml
@@ -30,9 +30,12 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.6
   dio: ^5.6.0
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
   flutter_dotenv: ^5.1.0
+  get_it: ^7.7.0
   go_router: ^14.2.7
 
 dev_dependencies:
