--- a/06_cinemapedia/pubspec.yaml
+++ b/06_cinemapedia/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   get_it: ^7.7.0
   go_router: ^14.2.7
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
