--- a/06_cinemapedia/pubspec.yaml
+++ b/06_cinemapedia/pubspec.yaml
@@ -40,11 +40,16 @@ dependencies:
   get_it: ^7.7.0
   go_router: ^14.2.7
   intl: ^0.19.0
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.4
 
 dev_dependencies:
+  build_runner: ^2.4.12
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+  isar_generator: ^3.1.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
