--- a/06_cinemapedia/pubspec.yaml
+++ b/06_cinemapedia/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_dotenv: ^5.1.0
+  flutter_staggered_grid_view: ^0.7.0
   get_it: ^7.7.0
   go_router: ^14.2.7
   intl: ^0.19.0
