--- a/08_push_app/pubspec.yaml
+++ b/08_push_app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  flutter_local_notifications: ^17.2.3
   go_router: ^14.2.7
 
 dev_dependencies:
