--- a/09_teslo_app/pubspec.yaml
+++ b/09_teslo_app/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
+  formz: ^0.7.0
   go_router: ^14.2.8
   google_fonts: ^6.2.1
 
