--- a/09_teslo_app/pubspec.yaml
+++ b/09_teslo_app/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   dio: ^5.7.0
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
   flutter_riverpod: ^2.5.1
   formz: ^0.7.0
   go_router: ^14.2.8
@@ -27,6 +28,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/loaders/
     - assets/images/
     - google_fonts/montserrat_alternates/
