--- a/09_teslo_app/pubspec.yaml
+++ b/09_teslo_app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   formz: ^0.7.0
   go_router: ^14.2.8
   google_fonts: ^6.2.1
+  image_picker: ^1.1.2
   shared_preferences: ^2.3.2
 
 dev_dependencies:
